--- a/src/components/education/Education.css
+++ b/src/components/education/Education.css
@@ -9,7 +9,7 @@
 }
 
 .magic-text {
-  background: linear-gradient(125deg, #722323 60%, #d15d5d 100%);
+  background: linear-gradient(125deg, var(--primary)60%, var(--secondary)100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
