--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -64,6 +64,9 @@
 }
 
 .project-card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   background: var(--card-bg);
   border: 1px solid var(--card-border);
   border-radius: 16px;
@@ -72,14 +75,15 @@
   box-shadow: 0 4px 12px var(--shadow);
 }
 
+
 .project-card:hover {
   transform: translateY(-6px);
 }
 
-.project-card.featured {
+/* .project-card.featured {
   grid-column: span 2;
 
-}
+} */
 
 @media (max-width: 640px) {
   .project-card.featured {
@@ -99,14 +103,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: fit-content;
+  height: 220px; 
+  overflow: hidden;
 }
 
 .card-image-wrapper img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
+
 
 .badge {
   position: absolute;
@@ -173,6 +179,7 @@
   display: flex;
   flex-direction: row;
   gap: 6px;
+  flex-wrap: wrap;
 }
 
 .tag {
